2021-December-27 Struan Robertson

		* gWellProperties.h, MolecularManager.h: Include discipline changes.

		* ConditionsManager.h: Preparation for traces error analysis.

2021-November-21 Struan Robertson

		* ExponentialDown.cpp: ExponentialDown energy transfer class altered to include a
		linear dependence on the initial energy.

		* Documentation update.

2021-November-11 Struan Robertson

		* Reaction.h/.cpp and all dervied classes and all classes derived from MicroRate.h
		and Tunneling.h: Changes to rationalize header file inclusion.

2021-November-09 Struan Robertson

		* Reaction.h/.cpp, ExchangeReaction.h, IrreversibleExchangeReaction.h: Tidying-up of 
		Reaction class.

2021-November-08 Struan Robertson

		* Reaction.h/.cpp, MicroRate.h/.cpp, ExchangeReaction.h, IrreversibleExchangeReaction.h,
		baseline updates: Improve reporting of bimolecular rate coefficients.

		* MolecularComponets.h, PhaseIntegrals.cpp: Include file rationalization.
		
		* ParallelManager.h: Parallel mutual exclusion methods added.

2021-October-31 Struan Robertson

		* CollisionOperator.h/.cpp, System.h/.cpp: Added a method to locate sink reaction 
		species to support rate coefficient fitting of multiple sink reactions.

2021-September-26 Struan Robertson

		* CollisionOperator.cpp, gWellProperties.h/.cpp: Fixes for Linux64 build breaks.

2021-September-26 Struan Robertson

		* CollisionOperator.cpp, gWellProperties.h/.cpp, TMatrix.h, MesmerFlags.cpp: 
		Updated old print matrix method for new.

		* mesmer1.xsl: Fix for Cantera format.

		* Win32 Baseline update.

2021-September-25 Struan Robertson

		* CollisionOperator.cpp: Fixed for reservoir state and dissociation reaction.

		* Documentation update.

2021-September-05 Struan Robertson

		* gDensityOfStates.h/.cpp: Fixed for thermodynamic functions at 0 K.

		* System.h: Version update.

2021-July-25 Struan Robertson

		* CollisionOperator.cpp: Replaced numerical integration of sink product distribution 