@@ -1146,6 +1146,8 @@ src/gTransitionState.cpp -text
 src/gTransitionState.h -text
 src/gWellProperties.cpp -text
 src/gWellProperties.h -text
+src/gWellRadiationTransition.cpp -text
+src/gWellRadiationTransition.h -text
 src/keys.txt -text
 src/main.cpp -text
 src/plugin.h -text
