@@ -1,3 +1,8 @@
+2021-December-29 Struan Robertson
+
+		* gWellProperties.h, gWellRadiationTransition.h/.cpp, CollisionOperator.cpp, 
+		gDensityOfStates.cpp, Molecule.h/.cpp: Initial implementation of radiation transitions.
+
 2021-December-27 Struan Robertson
 
 		* gWellProperties.h, MolecularManager.h: Include discipline changes.
